fix for z-index on wall-to-wall avatars in testbubble theme

--- a/view/theme/testbubble/style.css
+++ b/view/theme/testbubble/style.css
@@ -993,7 +993,7 @@ profile-jot-banner-wrapper {
     position: absolute;
     top: 65px;
     width: 30px;
-    z-index: 10001;
+    z-index: 900;
 	width: 30px;
 	height: 30px;    
 }
@@ -1004,7 +1004,7 @@ profile-jot-banner-wrapper {
     position: absolute;
     left: 20px;
     top: 70px;
-    z-index: 10002;
+    z-index: 950;
 }
 
 .wall-item-photo-menu {
